parser.output
   0  $accept : %entry% $end

   1  program : instr program
   2          | decl program
   3          | EOF
   4          | T_OPEN_BRA T_CLOSE_BRA program

   5  compound : T_OPEN_BRA instr_list T_CLOSE_BRA

   6  instr : T_SEMICOLON
   7        | compound
   8        | T_VAR binding_list T_SEMICOLON
   9        | T_WHILE T_OPEN_PAR expr T_CLOSE_PAR instr
  10        | T_RETURN expr T_SEMICOLON
  11        | T_RETURN T_SEMICOLON
  12        | expr_aux T_SEMICOLON
  13        | T_IF T_OPEN_PAR expr T_CLOSE_PAR instr T_ELSE instr
  14        | T_IF T_OPEN_PAR expr T_CLOSE_PAR instr

  15  decl : T_FUNCTION T_IDENTIFIER T_OPEN_PAR binding_list_empty T_CLOSE_PAR type_opt T_OPEN_BRA instr_list_empty T_CLOSE_BRA
  16       | T_TYPE T_IDENTIFIER T_ASSIGN type_
  17       | T_LET binding_list T_SEMICOLON
  18       | T_CONST binding_list T_SEMICOLON

  19  tab_expr_list : expr T_COMMA tab_expr_list
  20                |
  21                | expr

  22  object_expr_member : T_IDENTIFIER T_COLON expr

  23  object_expr_member_list : object_expr_member T_COMMA object_expr_member_list
  24                          | object_expr_member T_COMMA
  25                          | object_expr_member

  26  object_expr : T_OPEN_BRA object_expr_member_list T_CLOSE_BRA

  27  expr : T_OPEN_BRA T_CLOSE_BRA
  28       | expr_aux

  29  expr_aux : T_INT_LIT
  30           | T_FLOAT_LIT
  31           | T_STR_LIT
  32           | T_BOOL_LIT
  33           | object_expr
  34           | unop
  35           | binop
  36           | left_member
  37           | T_OPEN_SQR tab_expr_list T_CLOSE_SQR
  38           | left_member T_ASSIGN expr
  39           | expr T_OPEN_PAR tab_expr_list T_CLOSE_PAR

  40  left_member : T_IDENTIFIER
  41              | expr T_OPEN_SQR expr T_CLOSE_SQR
  42              | expr T_DOT T_IDENTIFIER
  43              | T_OPEN_PAR expr T_CLOSE_PAR

  44  instr_list : instr instr_list
  45             | decl instr_list
  46             | instr
  47             | decl

  48  instr_list_empty : instr_list
  49                   |

  50  binding : T_IDENTIFIER type_opt T_ASSIGN expr
  51          | T_IDENTIFIER type_opt

  52  binding_list : binding
  53               | binding T_COMMA binding_list

  54  binding_list_empty : binding_list
  55                     |

  56  union_type : union_type T_BAR basic_type
  57             | basic_type T_BAR basic_type

  58  type_ : basic_type
  59        | union_type
  60        | type_ T_OPEN_SQR T_CLOSE_SQR

  61  basic_type : T_IDENTIFIER
  62             | T_NUMBER
  63             | T_BOOLEAN
  64             | T_STRING
  65             | T_ANY
  66             | T_OPEN_BRA object_member_list T_CLOSE_BRA
  67             | T_OPEN_PAR type_ T_CLOSE_PAR
  68             | T_INT_LIT
  69             | T_FLOAT_LIT
  70             | T_BOOL_LIT
  71             | T_STR_LIT

  72  type_opt : T_COLON type_
  73           |

  74  object_member : T_IDENTIFIER T_COLON type_
  75                | T_IDENTIFIER

  76  object_member_list : object_member T_COMMA object_member_list
  77                     | object_member T_SEMICOLON object_member_list
  78                     | object_member T_COMMA
  79                     | object_member T_SEMICOLON
  80                     | object_member

  81  unop : T_NOT expr
  82       | T_PLUS expr
  83       | T_MINUS expr
  84       | T_TYPEOF expr

  85  binop : expr T_PLUS expr
  86        | expr T_MINUS expr
  87        | expr T_MUL expr
  88        | expr T_DIV expr
  89        | expr T_LT expr
  90        | expr T_LEQ expr
  91        | expr T_GT expr
  92        | expr T_GEQ expr
  93        | expr T_EQ expr
  94        | expr T_DIFF expr
  95        | expr T_EQQ expr
  96        | expr T_NEQQ expr
  97        | expr T_AND expr
  98        | expr T_OR expr
  99        | expr T_NOT expr
 100        | expr T_POW expr

 101  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (101)

	T_INT_LIT  shift 3
	T_FLOAT_LIT  shift 4
	T_STR_LIT  shift 5
	T_IDENTIFIER  shift 6
	T_BOOL_LIT  shift 7
	T_TYPE  shift 8
	T_IF  shift 9
	T_WHILE  shift 10
	T_RETURN  shift 11
	T_LET  shift 12
	T_VAR  shift 13
	T_FUNCTION  shift 14
	T_TYPEOF  shift 15
	T_CONST  shift 16
	T_OPEN_PAR  shift 17
	T_OPEN_BRA  shift 18
	T_OPEN_SQR  shift 19
	T_SEMICOLON  shift 20
	T_PLUS  shift 21
	T_MINUS  shift 22
	T_NOT  shift 23
	EOF  shift 24
	.  error

	program  goto 25
	instr  goto 26
	compound  goto 27
	decl  goto 28
	expr  goto 29
	left_member  goto 30
	object_expr  goto 31
	expr_aux  goto 32
	unop  goto 33
	binop  goto 34


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	expr_aux : T_INT_LIT .  (29)

	.  reduce 29


state 4
	expr_aux : T_FLOAT_LIT .  (30)

	.  reduce 30


state 5
	expr_aux : T_STR_LIT .  (31)

	.  reduce 31


state 6
	left_member : T_IDENTIFIER .  (40)

	.  reduce 40


state 7
	expr_aux : T_BOOL_LIT .  (32)

	.  reduce 32


state 8
	decl : T_TYPE . T_IDENTIFIER T_ASSIGN type_  (16)

	T_IDENTIFIER  shift 35
	.  error


state 9
	instr : T_IF . T_OPEN_PAR expr T_CLOSE_PAR instr T_ELSE instr  (13)
	instr : T_IF . T_OPEN_PAR expr T_CLOSE_PAR instr  (14)

	T_OPEN_PAR  shift 36
	.  error


state 10
	instr : T_WHILE . T_OPEN_PAR expr T_CLOSE_PAR instr  (9)

	T_OPEN_PAR  shift 37
	.  error


state 11
	instr : T_RETURN . expr T_SEMICOLON  (10)
	instr : T_RETURN . T_SEMICOLON  (11)

	T_INT_LIT  shift 3
	T_FLOAT_LIT  shift 4
	T_STR_LIT  shift 5
	T_IDENTIFIER  shift 6
	T_BOOL_LIT  shift 7
	T_TYPEOF  shift 15
	T_OPEN_PAR  shift 17
	T_OPEN_BRA  shift 38
	T_OPEN_SQR  shift 19
	T_SEMICOLON  shift 39
	T_PLUS  shift 21
	T_MINUS  shift 22
	T_NOT  shift 23
	.  error

	expr  goto 40
	left_member  goto 30
	object_expr  goto 31
	expr_aux  goto 41
	unop  goto 33
	binop  goto 34


state 12
	decl : T_LET . binding_list T_SEMICOLON  (17)

	T_IDENTIFIER  shift 42
	.  error

	binding  goto 43
	binding_list  goto 44


state 13
	instr : T_VAR . binding_list T_SEMICOLON  (8)

	T_IDENTIFIER  shift 42
	.  error

	binding  goto 43
	binding_list  goto 45


state 14
	decl : T_FUNCTION . T_IDENTIFIER T_OPEN_PAR binding_list_empty T_CLOSE_PAR type_opt T_OPEN_BRA instr_list_empty T_CLOSE_BRA  (15)

	T_IDENTIFIER  shift 46
	.  error


state 15
	unop : T_TYPEOF . expr  (84)

	T_INT_LIT  shift 3
	T_FLOAT_LIT  shift 4
	T_STR_LIT  shift 5
	T_IDENTIFIER  shift 6
	T_BOOL_LIT  shift 7
	T_TYPEOF  shift 15
	T_OPEN_PAR  shift 17
	T_OPEN_BRA  shift 38
	T_OPEN_SQR  shift 19
	T_PLUS  shift 21
	T_MINUS  shift 22
	T_NOT  shift 23
	.  error

	expr  goto 47
	left_member  goto 30
	object_expr  goto 31
	expr_aux  goto 41
	unop  goto 33
	binop  goto 34


state 16
	decl : T_CONST . binding_list T_SEMICOLON  (18)

	T_IDENTIFIER  shift 42
	.  error

	binding  goto 43
	binding_list  goto 48


state 17
	left_member : T_OPEN_PAR . expr T_CLOSE_PAR  (43)

	T_INT_LIT  shift 3
	T_FLOAT_LIT  shift 4
	T_STR_LIT  shift 5
	T_IDENTIFIER  shift 6
	T_BOOL_LIT  shift 7
	T_TYPEOF  shift 15
	T_OPEN_PAR  shift 17
	T_OPEN_BRA  shift 38
	T_OPEN_SQR  shift 19
	T_PLUS  shift 21
	T_MINUS  shift 22
	T_NOT  shift 23
	.  error

	expr  goto 49
	left_member  goto 30
	object_expr  goto 31
	expr_aux  goto 41
	unop  goto 33
	binop  goto 34


state 18
	program : T_OPEN_BRA . T_CLOSE_BRA program  (4)
	compound : T_OPEN_BRA . instr_list T_CLOSE_BRA  (5)
	object_expr : T_OPEN_BRA . object_expr_member_list T_CLOSE_BRA  (26)
	expr : T_OPEN_BRA . T_CLOSE_BRA  (27)

	T_INT_LIT  shift 3
	T_FLOAT_LIT  shift 4
	T_STR_LIT  shift 5
	T_IDENTIFIER  shift 50
	T_BOOL_LIT  shift 7
	T_TYPE  shift 8
	T_IF  shift 9
	T_WHILE  shift 10
	T_RETURN  shift 11
	T_LET  shift 12
	T_VAR  shift 13
	T_FUNCTION  shift 14
	T_TYPEOF  shift 15
	T_CONST  shift 16
	T_OPEN_PAR  shift 17
	T_OPEN_BRA  shift 51
	T_CLOSE_BRA  shift 52
	T_OPEN_SQR  shift 19
	T_SEMICOLON  shift 20
	T_PLUS  shift 21
	T_MINUS  shift 22
	T_NOT  shift 23
	.  error

	instr  goto 53
	compound  goto 27
	decl  goto 54
	expr  goto 29
	left_member  goto 30
	object_expr  goto 31
	object_expr_member  goto 55
	object_expr_member_list  goto 56
	instr_list  goto 57
	expr_aux  goto 32
	unop  goto 33
	binop  goto 34


state 19
	expr_aux : T_OPEN_SQR . tab_expr_list T_CLOSE_SQR  (37)
	tab_expr_list : .  (20)

	T_INT_LIT  shift 3
	T_FLOAT_LIT  shift 4
	T_STR_LIT  shift 5
	T_IDENTIFIER  shift 6
	T_BOOL_LIT  shift 7
	T_TYPEOF  shift 15
	T_OPEN_PAR  shift 17
	T_OPEN_BRA  shift 38
	T_OPEN_SQR  shift 19
	T_PLUS  shift 21
	T_MINUS  shift 22
	T_NOT  shift 23
	T_CLOSE_SQR  reduce 20

	expr  goto 58
	left_member  goto 30
	object_expr  goto 31
	tab_expr_list  goto 59
	expr_aux  goto 41
	unop  goto 33
	binop  goto 34


state 20
	instr : T_SEMICOLON .  (6)

	.  reduce 6


state 21
	unop : T_PLUS . expr  (82)

	T_INT_LIT  shift 3
	T_FLOAT_LIT  shift 4
	T_STR_LIT  shift 5
	T_IDENTIFIER  shift 6
	T_BOOL_LIT  shift 7
	T_TYPEOF  shift 15
	T_OPEN_PAR  shift 17
	T_OPEN_BRA  shift 38
	T_OPEN_SQR  shift 19
	T_PLUS  shift 21
	T_MINUS  shift 22
	T_NOT  shift 23
	.  error

	expr  goto 60
	left_member  goto 30
	object_expr  goto 31
	expr_aux  goto 41
	unop  goto 33
	binop  goto 34


state 22
	unop : T_MINUS . expr  (83)

	T_INT_LIT  shift 3
	T_FLOAT_LIT  shift 4
	T_STR_LIT  shift 5
	T_IDENTIFIER  shift 6
	T_BOOL_LIT  shift 7
	T_TYPEOF  shift 15
	T_OPEN_PAR  shift 17
	T_OPEN_BRA  shift 38
	T_OPEN_SQR  shift 19
	T_PLUS  shift 21
	T_MINUS  shift 22
	T_NOT  shift 23
	.  error

	expr  goto 61
	left_member  goto 30
	object_expr  goto 31
	expr_aux  goto 41
	unop  goto 33
	binop  goto 34


state 23
	unop : T_NOT . expr  (81)

	T_INT_LIT  shift 3
	T_FLOAT_LIT  shift 4
	T_STR_LIT  shift 5
	T_IDENTIFIER  shift 6
	T_BOOL_LIT  shift 7
	T_TYPEOF  shift 15
	T_OPEN_PAR  shift 17
	T_OPEN_BRA  shift 38
	T_OPEN_SQR  shift 19
	T_PLUS  shift 21
	T_MINUS  shift 22
	T_NOT  shift 23
	.  error

	expr  goto 62
	left_member  goto 30
	object_expr  goto 31
	expr_aux  goto 41
	unop  goto 33
	binop  goto 34


state 24
	program : EOF .  (3)

	.  reduce 3


state 25
	%entry% : '\001' program .  (101)

	.  reduce 101


state 26
	program : instr . program  (1)

	T_INT_LIT  shift 3
	T_FLOAT_LIT  shift 4
	T_STR_LIT  shift 5
	T_IDENTIFIER  shift 6
	T_BOOL_LIT  shift 7
	T_TYPE  shift 8
	T_IF  shift 9
	T_WHILE  shift 10
	T_RETURN  shift 11
	T_LET  shift 12
	T_VAR  shift 13
	T_FUNCTION  shift 14
	T_TYPEOF  shift 15
	T_CONST  shift 16
	T_OPEN_PAR  shift 17
	T_OPEN_BRA  shift 18
	T_OPEN_SQR  shift 19
	T_SEMICOLON  shift 20
	T_PLUS  shift 21
	T_MINUS  shift 22
	T_NOT  shift 23
	EOF  shift 24
	.  error

	program  goto 63
	instr  goto 26
	compound  goto 27
	decl  goto 28
	expr  goto 29
	left_member  goto 30
	object_expr  goto 31
	expr_aux  goto 32
	unop  goto 33
	binop  goto 34


state 27
	instr : compound .  (7)

	.  reduce 7


state 28
	program : decl . program  (2)

	T_INT_LIT  shift 3
	T_FLOAT_LIT  shift 4
	T_STR_LIT  shift 5
	T_IDENTIFIER  shift 6
	T_BOOL_LIT  shift 7
	T_TYPE  shift 8
	T_IF  shift 9
	T_WHILE  shift 10
	T_RETURN  shift 11
	T_LET  shift 12
	T_VAR  shift 13
	T_FUNCTION  shift 14
	T_TYPEOF  shift 15
	T_CONST  shift 16
	T_OPEN_PAR  shift 17
	T_OPEN_BRA  shift 18
	T_OPEN_SQR  shift 19
	T_SEMICOLON  shift 20
	T_PLUS  shift 21
	T_MINUS  shift 22
	T_NOT  shift 23
	EOF  shift 24
	.  error

	program  goto 64
	instr  goto 26
	compound  goto 27
	decl  goto 28
	expr  goto 29
	left_member  goto 30
	object_expr  goto 31
	expr_aux  goto 32
	unop  goto 33
	binop  goto 34


state 29
	expr_aux : expr . T_OPEN_PAR tab_expr_list T_CLOSE_PAR  (39)
	left_member : expr . T_OPEN_SQR expr T_CLOSE_SQR  (41)
	left_member : expr . T_DOT T_IDENTIFIER  (42)
	binop : expr . T_PLUS expr  (85)
	binop : expr . T_MINUS expr  (86)
	binop : expr . T_MUL expr  (87)
	binop : expr . T_DIV expr  (88)
	binop : expr . T_LT expr  (89)
	binop : expr . T_LEQ expr  (90)
	binop : expr . T_GT expr  (91)
	binop : expr . T_GEQ expr  (92)
	binop : expr . T_EQ expr  (93)
	binop : expr . T_DIFF expr  (94)
	binop : expr . T_EQQ expr  (95)
	binop : expr . T_NEQQ expr  (96)
	binop : expr . T_AND expr  (97)
	binop : expr . T_OR expr  (98)
	binop : expr . T_NOT expr  (99)
	binop : expr . T_POW expr  (100)

	T_OPEN_PAR  shift 65
	T_OPEN_SQR  shift 66
	T_DOT  shift 67
	T_PLUS  shift 68
	T_MINUS  shift 69
	T_MUL  shift 70
	T_DIV  shift 71
	T_POW  shift 72
	T_AND  shift 73
	T_OR  shift 74
	T_NOT  shift 75
	T_LT  shift 76
	T_LEQ  shift 77
	T_GT  shift 78
	T_GEQ  shift 79
	T_EQ  shift 80
	T_DIFF  shift 81
	T_EQQ  shift 82
	T_NEQQ  shift 83
	.  error


state 30
	expr_aux : left_member .  (36)
	expr_aux : left_member . T_ASSIGN expr  (38)

	T_ASSIGN  shift 84
	T_OPEN_PAR  reduce 36
	T_CLOSE_PAR  reduce 36
	T_CLOSE_BRA  reduce 36
	T_OPEN_SQR  reduce 36
	T_CLOSE_SQR  reduce 36
	T_COMMA  reduce 36
	T_DOT  reduce 36
	T_SEMICOLON  reduce 36
	T_PLUS  reduce 36
	T_MINUS  reduce 36
	T_MUL  reduce 36
	T_DIV  reduce 36
	T_POW  reduce 36
	T_AND  reduce 36
	T_OR  reduce 36
	T_NOT  reduce 36
	T_LT  reduce 36
	T_LEQ  reduce 36
	T_GT  reduce 36
	T_GEQ  reduce 36
	T_EQ  reduce 36
	T_DIFF  reduce 36
	T_EQQ  reduce 36
	T_NEQQ  reduce 36


state 31
	expr_aux : object_expr .  (33)

	.  reduce 33


state 32
	instr : expr_aux . T_SEMICOLON  (12)
	expr : expr_aux .  (28)

	T_SEMICOLON  shift 85
	T_OPEN_PAR  reduce 28
	T_OPEN_SQR  reduce 28
	T_DOT  reduce 28
	T_PLUS  reduce 28
	T_MINUS  reduce 28
	T_MUL  reduce 28
	T_DIV  reduce 28
	T_POW  reduce 28
	T_AND  reduce 28
	T_OR  reduce 28
	T_NOT  reduce 28
	T_LT  reduce 28
	T_LEQ  reduce 28
	T_GT  reduce 28
	T_GEQ  reduce 28
	T_EQ  reduce 28
	T_DIFF  reduce 28
	T_EQQ  reduce 28
	T_NEQQ  reduce 28


state 33
	expr_aux : unop .  (34)

	.  reduce 34


state 34
	expr_aux : binop .  (35)

	.  reduce 35


state 35
	decl : T_TYPE T_IDENTIFIER . T_ASSIGN type_  (16)

	T_ASSIGN  shift 86
	.  error


state 36
	instr : T_IF T_OPEN_PAR . expr T_CLOSE_PAR instr T_ELSE instr  (13)
	instr : T_IF T_OPEN_PAR . expr T_CLOSE_PAR instr  (14)

	T_INT_LIT  shift 3
	T_FLOAT_LIT  shift 4
	T_STR_LIT  shift 5
	T_IDENTIFIER  shift 6
	T_BOOL_LIT  shift 7
	T_TYPEOF  shift 15
	T_OPEN_PAR  shift 17
	T_OPEN_BRA  shift 38
	T_OPEN_SQR  shift 19
	T_PLUS  shift 21
	T_MINUS  shift 22
	T_NOT  shift 23
	.  error

	expr  goto 87
	left_member  goto 30
	object_expr  goto 31
	expr_aux  goto 41
	unop  goto 33
	binop  goto 34


state 37
	instr : T_WHILE T_OPEN_PAR . expr T_CLOSE_PAR instr  (9)

	T_INT_LIT  shift 3
	T_FLOAT_LIT  shift 4
	T_STR_LIT  shift 5
	T_IDENTIFIER  shift 6
	T_BOOL_LIT  shift 7
	T_TYPEOF  shift 15
	T_OPEN_PAR  shift 17
	T_OPEN_BRA  shift 38
	T_OPEN_SQR  shift 19
	T_PLUS  shift 21
	T_MINUS  shift 22
	T_NOT  shift 23
	.  error

	expr  goto 88
	left_member  goto 30
	object_expr  goto 31
	expr_aux  goto 41
	unop  goto 33
	binop  goto 34


state 38
	object_expr : T_OPEN_BRA . object_expr_member_list T_CLOSE_BRA  (26)
	expr : T_OPEN_BRA . T_CLOSE_BRA  (27)

	T_IDENTIFIER  shift 89
	T_CLOSE_BRA  shift 90
	.  error

	object_expr_member  goto 55
	object_expr_member_list  goto 56


state 39
	instr : T_RETURN T_SEMICOLON .  (11)

	.  reduce 11


state 40
	instr : T_RETURN expr . T_SEMICOLON  (10)
	expr_aux : expr . T_OPEN_PAR tab_expr_list T_CLOSE_PAR  (39)
	left_member : expr . T_OPEN_SQR expr T_CLOSE_SQR  (41)
	left_member : expr . T_DOT T_IDENTIFIER  (42)
	binop : expr . T_PLUS expr  (85)
	binop : expr . T_MINUS expr  (86)
	binop : expr . T_MUL expr  (87)
	binop : expr . T_DIV expr  (88)
	binop : expr . T_LT expr  (89)
	binop : expr . T_LEQ expr  (90)
	binop : expr . T_GT expr  (91)
	binop : expr . T_GEQ expr  (92)
	binop : expr . T_EQ expr  (93)
	binop : expr . T_DIFF expr  (94)
	binop : expr . T_EQQ expr  (95)
	binop : expr . T_NEQQ expr  (96)
	binop : expr . T_AND expr  (97)
	binop : expr . T_OR expr  (98)
	binop : expr . T_NOT expr  (99)
	binop : expr . T_POW expr  (100)

	T_OPEN_PAR  shift 65
	T_OPEN_SQR  shift 66
	T_DOT  shift 67
	T_SEMICOLON  shift 91
	T_PLUS  shift 68
	T_MINUS  shift 69
	T_MUL  shift 70
	T_DIV  shift 71
	T_POW  shift 72
	T_AND  shift 73
	T_OR  shift 74
	T_NOT  shift 75
	T_LT  shift 76
	T_LEQ  shift 77
	T_GT  shift 78
	T_GEQ  shift 79
	T_EQ  shift 80
	T_DIFF  shift 81
	T_EQQ  shift 82
	T_NEQQ  shift 83
	.  error


state 41
	expr : expr_aux .  (28)

	.  reduce 28


state 42
	binding : T_IDENTIFIER . type_opt T_ASSIGN expr  (50)
	binding : T_IDENTIFIER . type_opt  (51)
	type_opt : .  (73)

	T_COLON  shift 92
	T_CLOSE_PAR  reduce 73
	T_COMMA  reduce 73
	T_SEMICOLON  reduce 73
	T_ASSIGN  reduce 73

	type_opt  goto 93


state 43
	binding_list : binding .  (52)
	binding_list : binding . T_COMMA binding_list  (53)

	T_COMMA  shift 94
	T_CLOSE_PAR  reduce 52
	T_SEMICOLON  reduce 52


state 44
	decl : T_LET binding_list . T_SEMICOLON  (17)

	T_SEMICOLON  shift 95
	.  error


state 45
	instr : T_VAR binding_list . T_SEMICOLON  (8)

	T_SEMICOLON  shift 96
	.  error


state 46
	decl : T_FUNCTION T_IDENTIFIER . T_OPEN_PAR binding_list_empty T_CLOSE_PAR type_opt T_OPEN_BRA instr_list_empty T_CLOSE_BRA  (15)

	T_OPEN_PAR  shift 97
	.  error


state 47
	expr_aux : expr . T_OPEN_PAR tab_expr_list T_CLOSE_PAR  (39)
	left_member : expr . T_OPEN_SQR expr T_CLOSE_SQR  (41)
	left_member : expr . T_DOT T_IDENTIFIER  (42)
	unop : T_TYPEOF expr .  (84)
	binop : expr . T_PLUS expr  (85)
	binop : expr . T_MINUS expr  (86)
	binop : expr . T_MUL expr  (87)
	binop : expr . T_DIV expr  (88)
	binop : expr . T_LT expr  (89)
	binop : expr . T_LEQ expr  (90)
	binop : expr . T_GT expr  (91)
	binop : expr . T_GEQ expr  (92)
	binop : expr . T_EQ expr  (93)
	binop : expr . T_DIFF expr  (94)
	binop : expr . T_EQQ expr  (95)
	binop : expr . T_NEQQ expr  (96)
	binop : expr . T_AND expr  (97)
	binop : expr . T_OR expr  (98)
	binop : expr . T_NOT expr  (99)
	binop : expr . T_POW expr  (100)

	T_DOT  shift 67
	T_PLUS  shift 68
	T_MINUS  shift 69
	T_MUL  shift 70
	T_DIV  shift 71
	T_POW  shift 72
	T_AND  shift 73
	T_OR  shift 74
	T_NOT  shift 75
	T_LT  shift 76
	T_LEQ  shift 77
	T_GT  shift 78
	T_GEQ  shift 79
	T_EQ  shift 80
	T_DIFF  shift 81
	T_EQQ  shift 82
	T_NEQQ  shift 83
	T_OPEN_PAR  reduce 84
	T_CLOSE_PAR  reduce 84
	T_CLOSE_BRA  reduce 84
	T_OPEN_SQR  reduce 84
	T_CLOSE_SQR  reduce 84
	T_COMMA  reduce 84
	T_SEMICOLON  reduce 84


state 48
	decl : T_CONST binding_list . T_SEMICOLON  (18)

	T_SEMICOLON  shift 98
	.  error


state 49
	expr_aux : expr . T_OPEN_PAR tab_expr_list T_CLOSE_PAR  (39)
	left_member : expr . T_OPEN_SQR expr T_CLOSE_SQR  (41)
	left_member : expr . T_DOT T_IDENTIFIER  (42)
	left_member : T_OPEN_PAR expr . T_CLOSE_PAR  (43)
	binop : expr . T_PLUS expr  (85)
	binop : expr . T_MINUS expr  (86)
	binop : expr . T_MUL expr  (87)
	binop : expr . T_DIV expr  (88)
	binop : expr . T_LT expr  (89)
	binop : expr . T_LEQ expr  (90)
	binop : expr . T_GT expr  (91)
	binop : expr . T_GEQ expr  (92)
	binop : expr . T_EQ expr  (93)
	binop : expr . T_DIFF expr  (94)
	binop : expr . T_EQQ expr  (95)
	binop : expr . T_NEQQ expr  (96)
	binop : expr . T_AND expr  (97)
	binop : expr . T_OR expr  (98)
	binop : expr . T_NOT expr  (99)
	binop : expr . T_POW expr  (100)

	T_OPEN_PAR  shift 65
	T_CLOSE_PAR  shift 99
	T_OPEN_SQR  shift 66
	T_DOT  shift 67
	T_PLUS  shift 68
	T_MINUS  shift 69
	T_MUL  shift 70
	T_DIV  shift 71
	T_POW  shift 72
	T_AND  shift 73
	T_OR  shift 74
	T_NOT  shift 75
	T_LT  shift 76
	T_LEQ  shift 77
	T_GT  shift 78
	T_GEQ  shift 79
	T_EQ  shift 80
	T_DIFF  shift 81
	T_EQQ  shift 82
	T_NEQQ  shift 83
	.  error


state 50
	object_expr_member : T_IDENTIFIER . T_COLON expr  (22)
	left_member : T_IDENTIFIER .  (40)

	T_COLON  shift 100
	T_OPEN_PAR  reduce 40
	T_OPEN_SQR  reduce 40
	T_DOT  reduce 40
	T_SEMICOLON  reduce 40
	T_PLUS  reduce 40
	T_MINUS  reduce 40
	T_MUL  reduce 40
	T_DIV  reduce 40
	T_POW  reduce 40
	T_AND  reduce 40
	T_OR  reduce 40
	T_NOT  reduce 40
	T_LT  reduce 40
	T_LEQ  reduce 40
	T_GT  reduce 40
	T_GEQ  reduce 40
	T_EQ  reduce 40
	T_DIFF  reduce 40
	T_EQQ  reduce 40
	T_NEQQ  reduce 40
	T_ASSIGN  reduce 40


state 51
	compound : T_OPEN_BRA . instr_list T_CLOSE_BRA  (5)
	object_expr : T_OPEN_BRA . object_expr_member_list T_CLOSE_BRA  (26)
	expr : T_OPEN_BRA . T_CLOSE_BRA  (27)

	T_INT_LIT  shift 3
	T_FLOAT_LIT  shift 4
	T_STR_LIT  shift 5
	T_IDENTIFIER  shift 50
	T_BOOL_LIT  shift 7
	T_TYPE  shift 8
	T_IF  shift 9
	T_WHILE  shift 10
	T_RETURN  shift 11
	T_LET  shift 12
	T_VAR  shift 13
	T_FUNCTION  shift 14
	T_TYPEOF  shift 15
	T_CONST  shift 16
	T_OPEN_PAR  shift 17
	T_OPEN_BRA  shift 51
	T_CLOSE_BRA  shift 90
	T_OPEN_SQR  shift 19
	T_SEMICOLON  shift 20
	T_PLUS  shift 21
	T_MINUS  shift 22
	T_NOT  shift 23
	.  error

	instr  goto 53
	compound  goto 27
	decl  goto 54
	expr  goto 29
	left_member  goto 30
	object_expr  goto 31
	object_expr_member  goto 55
	object_expr_member_list  goto 56
	instr_list  goto 57
	expr_aux  goto 32
	unop  goto 33
	binop  goto 34


state 52
	program : T_OPEN_BRA T_CLOSE_BRA . program  (4)
	expr : T_OPEN_BRA T_CLOSE_BRA .  (27)

	T_INT_LIT  shift 3
	T_FLOAT_LIT  shift 4
	T_STR_LIT  shift 5
	T_IDENTIFIER  shift 6
	T_BOOL_LIT  shift 7
	T_TYPE  shift 8
	T_IF  shift 9
	T_WHILE  shift 10
	T_RETURN  shift 11
	T_LET  shift 12
	T_VAR  shift 13
	T_FUNCTION  shift 14
	T_TYPEOF  shift 15
	T_CONST  shift 16
	T_OPEN_PAR  shift 17
	T_OPEN_BRA  shift 18
	T_OPEN_SQR  shift 19
	T_SEMICOLON  shift 20
	T_PLUS  shift 21
	T_MINUS  shift 22
	T_NOT  shift 23
	EOF  shift 24
	T_DOT  reduce 27
	T_MUL  reduce 27
	T_DIV  reduce 27
	T_POW  reduce 27
	T_AND  reduce 27
	T_OR  reduce 27
	T_LT  reduce 27
	T_LEQ  reduce 27
	T_GT  reduce 27
	T_GEQ  reduce 27
	T_EQ  reduce 27
	T_DIFF  reduce 27
	T_EQQ  reduce 27
	T_NEQQ  reduce 27

	program  goto 101
	instr  goto 26
	compound  goto 27
	decl  goto 28
	expr  goto 29
	left_member  goto 30
	object_expr  goto 31
	expr_aux  goto 32
	unop  goto 33
	binop  goto 34


state 53
	instr_list : instr . instr_list  (44)
	instr_list : instr .  (46)

	T_INT_LIT  shift 3
	T_FLOAT_LIT  shift 4
	T_STR_LIT  shift 5
	T_IDENTIFIER  shift 6
	T_BOOL_LIT  shift 7
	T_TYPE  shift 8
	T_IF  shift 9
	T_WHILE  shift 10
	T_RETURN  shift 11
	T_LET  shift 12
	T_VAR  shift 13
	T_FUNCTION  shift 14
	T_TYPEOF  shift 15
	T_CONST  shift 16
	T_OPEN_PAR  shift 17
	T_OPEN_BRA  shift 51
	T_OPEN_SQR  shift 19
	T_SEMICOLON  shift 20
	T_PLUS  shift 21
	T_MINUS  shift 22
	T_NOT  shift 23
	T_CLOSE_BRA  reduce 46

	instr  goto 53
	compound  goto 27
	decl  goto 54
	expr  goto 29
	left_member  goto 30
	object_expr  goto 31
	instr_list  goto 102
	expr_aux  goto 32
	unop  goto 33
	binop  goto 34


state 54
	instr_list : decl . instr_list  (45)
	instr_list : decl .  (47)

	T_INT_LIT  shift 3
	T_FLOAT_LIT  shift 4
	T_STR_LIT  shift 5
	T_IDENTIFIER  shift 6
	T_BOOL_LIT  shift 7
	T_TYPE  shift 8
	T_IF  shift 9
	T_WHILE  shift 10
	T_RETURN  shift 11
	T_LET  shift 12
	T_VAR  shift 13
	T_FUNCTION  shift 14
	T_TYPEOF  shift 15
	T_CONST  shift 16
	T_OPEN_PAR  shift 17
	T_OPEN_BRA  shift 51
	T_OPEN_SQR  shift 19
	T_SEMICOLON  shift 20
	T_PLUS  shift 21
	T_MINUS  shift 22
	T_NOT  shift 23
	T_CLOSE_BRA  reduce 47

	instr  goto 53
	compound  goto 27
	decl  goto 54
	expr  goto 29
	left_member  goto 30
	object_expr  goto 31
	instr_list  goto 103
	expr_aux  goto 32
	unop  goto 33
	binop  goto 34

